--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">Yamba</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
+    <string name="titleStatus">Status Update</string>
+    <string name="hintText">Please entrer your 140-character status</string>
+    <string name="buttonUpdate">Update</string>
 
 </resources>
